Enhanced Functionalities - Authentication & Authorization with Role and Privilege based -Initial Role, Privilege and User -Register user APIs -Fields validation with Spring validation